--- a/lab-notebook/2020_06_30_LEB_node_testing.ipynb
+++ b/lab-notebook/2020_06_30_LEB_node_testing.ipynb
@@ -30,8 +30,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "inputlayer = layer([])\n",
-    "foldiaklayer = layer([])"
+    "inputlayer = layer()\n",
+    "foldiaklayer = layer()"
    ]
   },
   {
@@ -77,7 +77,7 @@
     "* ~add same-layer connects and appropriate methods to FoldiakNet~\n",
     "* add net-wide update method that solves dif-eq\n",
     "* create update methods for HebbianConnect and AntiHebbianConnect\n",
-    "* add net-wide dictionary function for defining universal parameters and setting them in nodes/layers/connections"
+    "* ~add net-wide dictionary function for defining universal parameters and setting them in nodes/layers/connections~"
    ]
   },
   {
