--- a/lab-notebook/2020_06_30_LEB_node_testing.ipynb
+++ b/lab-notebook/2020_06_30_LEB_node_testing.ipynb
@@ -74,10 +74,10 @@
     "The above sets up the basic outline for a Foldiak's Algorithim network.\n",
     "\n",
     "TODO:\n",
-    "* ~add same-layer connects and appropriate methods to FoldiakNet~\n",
+    "* ~~add same-layer connects and appropriate methods to FoldiakNet~~\n",
     "* add net-wide update method that solves dif-eq\n",
     "* create update methods for HebbianConnect and AntiHebbianConnect\n",
-    "* ~add net-wide dictionary function for defining universal parameters and setting them in nodes/layers/connections~"
+    "* ~~add net-wide dictionary function for defining universal parameters and setting them in nodes/layers/connections~~"
    ]
   },
   {
