moved library source to lib

--- a/lab-notebook/2020_06_30_LEB_node_testing.ipynb
+++ b/lab-notebook/2020_06_30_LEB_node_testing.ipynb
@@ -76,7 +76,7 @@
     "TODO:\n",
     "* ~~add same-layer connects and appropriate methods to FoldiakNet~~\n",
     "* add net-wide update method that solves dif-eq\n",
-    "* create update methods for HebbianConnect and AntiHebbianConnect\n",
+    "* ~~create update methods for HebbianConnect and AntiHebbianConnect~~\n",
     "* ~~add net-wide dictionary function for defining universal parameters and setting them in nodes/layers/connections~~"
    ]
   },
