Basic Foldiak's full implementation
It lives! also, bugfixes.

Basic version of MNIST dataset - I will likely look at using another dataset soon; possibly the full 28x28 verison of MNIST

--- a/lab-notebook/2020_06_30_LEB_node_testing.ipynb
+++ b/lab-notebook/2020_06_30_LEB_node_testing.ipynb
@@ -44,7 +44,7 @@
     "\n",
     "for i in range(16):\n",
     "    #Need to write more backend for the threshold; I didn't use a normal threshold in the old code.\n",
-    "    foldiaklayer.append(FoldiakNode([],1.0))\n",
+    "    foldiaklayer.append(FoldiakNode(1.0))\n",
     "for i in range(64):\n",
     "    #I really need a way to make layers able to store multidimensional arrays; eventually, this would be an 8x8 (or larger)\n",
     "    inputlayer.append(InputNode(0))"
