SciPy ODE Solver Test
MUCH slower than original solver. Will try original solver with vectorized information.

--- a/lab-notebook/2020_07_02_LEB_timing.ipynb
+++ b/lab-notebook/2020_07_02_LEB_timing.ipynb
@@ -21,11 +21,11 @@
     "foldiaklayer = layer()\n",
     "\n",
     "for i in range(16):\n",
-    "    foldiaklayer.append(FoldiakNode(0.5))\n",
+    "    foldiaklayer.append(FoldiakNode())\n",
     "for i in range(784):\n",
     "    #I really need a way to make layers able to store multidimensional arrays; eventually, this would be an 8x8 (or larger)\n",
     "    #Actually, lets do 28x28 so I can run MNIST through this\n",
-    "    inputlayer.append(InputNode(0))\n",
+    "    inputlayer.append(InputNode())\n",
     "    \n",
     "network = FoldiakNet()\n",
     "network.append(inputlayer)\n",
@@ -79,14 +79,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.051389999999941\n"
+      "0.3954263\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\users\\luke\\envs\\rsi-2020-bemish\\lib\\site-packages\\numba\\core\\typed_passes.py:314: NumbaPerformanceWarning: \u001b[1m\n",
+      "The keyword argument 'parallel=True' was specified but no transformation for parallel execution was possible.\n",
+      "\n",
+      "To find out why, try turning on parallel diagnostics, see http://numba.pydata.org/numba-doc/latest/user/parallel.html#diagnostics for help.\n",
+      "\u001b[1m\n",
+      "File \"..\\lib\\nodes\\util.py\", line 39:\u001b[0m\n",
+      "\u001b[1m@jit(nopython=True, parallel=True)\n",
+      "\u001b[1mdef foldiak_func(l, inside):\n",
+      "\u001b[0m\u001b[1m^\u001b[0m\u001b[0m\n",
+      "\u001b[0m\n",
+      "  state.func_ir.loc))\n"
      ]
     }
    ],
@@ -94,7 +111,32 @@
     "t0 = time.clock()\n",
     "network.update()\n",
     "t1 = time.clock()\n",
-    "print((t1-t0)*90000/60/60)"
+    "print((t1-t0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.03333368400000111\n"
+     ]
+    }
+   ],
+   "source": [
+    "import time\n",
+    "deltas = []\n",
+    "\n",
+    "for i in range(100):\n",
+    "    t0 = time.clock()\n",
+    "    network.update()\n",
+    "    t1 = time.clock()\n",
+    "    deltas.append(t1-t0)\n",
+    "print(sum(deltas)/len(deltas))"
    ]
   },
   {
