Bug-filled vectorized ODE solver

--- a/lab-notebook/2020_07_02_LEB_timing.ipynb
+++ b/lab-notebook/2020_07_02_LEB_timing.ipynb
@@ -22,7 +22,7 @@
     "\n",
     "for i in range(16):\n",
     "    foldiaklayer.append(FoldiakNode())\n",
-    "for i in range(784):\n",
+    "for i in range(8*8):\n",
     "    #I really need a way to make layers able to store multidimensional arrays; eventually, this would be an 8x8 (or larger)\n",
     "    #Actually, lets do 28x28 so I can run MNIST through this\n",
     "    inputlayer.append(InputNode())\n",
@@ -48,14 +48,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.005188599999999877\n"
+      "0.0006314000000000001\n"
      ]
     }
    ],
@@ -86,7 +86,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.3954263\n"
+      "0.3269004\n"
      ]
     },
     {
@@ -123,7 +123,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.03333368400000111\n"
+      "0.016094658999999904\n"
      ]
     }
    ],
