solve_ivp works
I fixed it! currently, I let it choose its own times, though this could change.

--- a/lab-notebook/2020_07_07_LEB_priorities.ipynb
+++ b/lab-notebook/2020_07_07_LEB_priorities.ipynb
@@ -8,7 +8,13 @@
     "----------\n",
     "\n",
     "1. Quantify accuracy - learned memories, predictions\n",
-    "2. "
+    "2. Quantify, compare inhibition - possibly increase output size for more data?\n",
+    "3. Look at accuracy compared to various changes:\n",
+    "    1. Changes in number of categories\n",
+    "    2. Changes in `p`\n",
+    "    3. Changes in training rates\n",
+    "    4. Changes in `dt` and `tnum`\n",
+    "4. "
    ]
   },
   {
