intmethod premliminary tests

--- a/lab-notebook/2020_07_03_LEB_vector_ode_test.ipynb
+++ b/lab-notebook/2020_07_03_LEB_vector_ode_test.ipynb
@@ -26,7 +26,7 @@
     "network.append(foldiaklayer)\n",
     "network.connect_foldiak(inputlayer, foldiaklayer)\n",
     "\n",
-    "network.setparam(\"intmethod\",\"BDF\")\n",
+    "network.setparam(\"intmethod\",\"LSODA\")\n",
     "\n",
     "network.setparam(\"a\",0.01)\n",
     "network.setparam(\"b\",0.001)\n",
@@ -46,7 +46,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.019664124000000005\n"
+      "0.009432094000000016\n"
      ]
     }
    ],
@@ -186,7 +186,7 @@
     "            \n",
     "    plt.imshow(np.array(testbias).reshape((8,8)))\n",
     "fig.tight_layout()\n",
-    "plt.savefig(\"2020_07_07_bias_figure.png\")\n",
+    "#plt.savefig(\"2020_07_07_bias_figure.png\")\n",
     "plt.show()"
    ]
   },
@@ -221,7 +221,7 @@
    "source": [
     "samplenum = 30\n",
     "plt.imshow(samples[samplenum,:].reshape((8,8)))\n",
-    "plt.savefig(\"2020_07_07_sample_ex.png\")\n",
+    "#plt.savefig(\"2020_07_07_sample_ex.png\")\n",
     "plt.show()\n",
     "for i in range(8*8):\n",
     "    inputlayer.nodes[i].setvalstored(samples[samplenum,i])\n",
