Investigations into convergence.

--- a/lab-notebook/2020_07_07_LEB_priorities.ipynb
+++ b/lab-notebook/2020_07_07_LEB_priorities.ipynb
@@ -13,8 +13,10 @@
     "    1. Changes in number of categories\n",
     "    2. Changes in `p`\n",
     "    3. Changes in training rates\n",
-    "    4. Changes in `dt` and `tnum`\n",
-    "4. "
+    "    4. Changes in `tmax`\n",
+    "4. Change rules - ignore inhibition in \"evaluation\" output?\n",
+    "5. Look at effect of `p` on final value.\n",
+    "6. Add weight decay to Anti-Hebbian rule."
    ]
   },
   {
