More experimentation, etc.

--- a/lab-notebook/2020_07_07_LEB_priorities.ipynb
+++ b/lab-notebook/2020_07_07_LEB_priorities.ipynb
@@ -20,6 +20,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Possible ideas:\n",
+    "---------------\n",
+    "\n",
+    "- Keep vectors at scale 1?\n",
+    "    - Keep memories at length 1.\n",
+    "- Eliminate threshold?\n",
+    "- `p` - would like to avoid having to specify `p`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Analysis\n",
+    "* Starting values for $p_i$\n",
+    "* Rules - nonlinear?\n",
+    "* Re-run from original"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
